--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
         <video id="video">Video stream not available</video>
         <button id="capturebtn">Take a snap</button>
     </div>
+    <canvas id="canvas">
+
+    </canvas>
+    <div class="output">
+        <img id="photo" alt="screen capture will appear in this box">
+    </div>
 
 </body>
 
